// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DatePicker > Snapshots > should match snapshot when disabled 1`] = `
<div
  class="relative inline-block w-full"
>
  <div
    class="relative w-full"
  >
    <input
      aria-label="Select date"
      class="w-full rounded-md border border-gray-300 bg-white text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-transparent transition-colors pr-10 px-3 py-2 text-base bg-gray-100 cursor-not-allowed text-gray-500"
      disabled=""
      placeholder="Select date"
      readonly=""
      type="text"
      value=""
    />
    <!---->
    <button
      aria-label="Toggle calendar"
      class="absolute right-0 top-0 bottom-0 flex items-center justify-center text-gray-400 hover:text-gray-600 transition-colors px-3"
      disabled=""
      type="button"
    >
      <svg
        class="w-5 h-5"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
  <!---->
</div>
`;

exports[`DatePicker > Snapshots > should match snapshot with default props 1`] = `
<div
  class="relative inline-block w-full"
>
  <div
    class="relative w-full"
  >
    <input
      aria-label="Select date"
      class="w-full rounded-md border border-gray-300 bg-white text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-transparent transition-colors pr-10 px-3 py-2 text-base cursor-pointer"
      placeholder="Select date"
      readonly=""
      type="text"
      value=""
    />
    <!---->
    <button
      aria-label="Toggle calendar"
      class="absolute right-0 top-0 bottom-0 flex items-center justify-center text-gray-400 hover:text-gray-600 transition-colors px-3"
      type="button"
    >
      <svg
        class="w-5 h-5"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
  <!---->
</div>
`;

exports[`DatePicker > Snapshots > should match snapshot with selected date 1`] = `
<div
  class="relative inline-block w-full"
>
  <div
    class="relative w-full"
  >
    <input
      aria-label="Select date"
      class="w-full rounded-md border border-gray-300 bg-white text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-[var(--tiger-primary,#2563eb)] focus:border-transparent transition-colors pr-10 px-3 py-2 text-base cursor-pointer"
      placeholder="Select date"
      readonly=""
      type="text"
      value="2024-01-15"
    />
    <button
      aria-label="Clear date"
      class="absolute right-10 top-1/2 -translate-y-1/2 text-gray-400 hover:text-gray-600 transition-colors p-1"
      type="button"
    >
      <svg
        class="w-4 h-4"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <button
      aria-label="Toggle calendar"
      class="absolute right-0 top-0 bottom-0 flex items-center justify-center text-gray-400 hover:text-gray-600 transition-colors px-3"
      type="button"
    >
      <svg
        class="w-5 h-5"
        fill="currentColor"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
  <!---->
</div>
`;
